Starting layout: starting header"

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "less-plugin-clean-css": "^1.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-flagkit": "^2.0.4",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
@@ -51,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-world-flags": "^1.6.0"
   }
 }
