--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/react-dom": "^18.0.0",
     "craco-less": "^3.0.1",
     "gh-pages": "^6.2.0",
+    "i18next": "^23.4.0",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "less-plugin-clean-css": "^1.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-flagkit": "^2.0.4",
+    "react-i18next": "^15.1.3",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.14.5",
     "sweetalert2-react-content": "^5.0.7",
